# memory-ai-agents

./: .env.example  .gitignore  LICENSE  README.md  agents_memory_note.md  main.py  pyproject.toml  requirements.txt  suggestion_plan.md
mem-zero/: architecture_note.md  mem_zero_repo.md
mem-zero/implement/: PERFORMANCE_OPTIMIZATION.md  README.md  demo.py  pyproject.toml  requirements.txt
mem-zero/implement/data/demo/storage/: contexts.json
mem-zero/implement/data/demo/vector_store/: memories.json  vectors.npy
mem-zero/implement/src/: __init__.py
mem-zero/implement/src/agents/: graph.py  state.py
mem-zero/implement/src/memory/: memory_manager.py  storage.py  vector_store.py
mem-zero/implement/src/utils/: observability.py
mem-zero/vibed-implement/: ARCHITECTURE_REFACTOR.md  demo.py  requirements.txt
mem-zero/vibed-implement/data/demo/storage/: contexts.json
mem-zero/vibed-implement/data/demo/vector_store/: memories.json  vectors.npy
mem-zero/vibed-implement/src/agents/: __init__.py  graph.py
mem-zero/vibed-implement/src/memory/: __init__.py  background_tasks.py  embeddings.py  memory_manager.py  models.py  storage.py  vector_store.py
