[project]
name = "implement"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "typing-extensions>=4.8.0",
]
